--- a/src/i18n/translations/pt.json
+++ b/src/i18n/translations/pt.json
@@ -13,7 +13,7 @@
     "DownloadCv": "Baixar CV",
     "SobreP1": "Meu nome é Josué Carvalho, sou um desenvolvedor front-end em transição de carreira, com 21 anos de idade e possuo habilidades avançadas em inglês. Atualmente, estou focado em aprimorar minhas habilidades em React JS, uma das principais bibliotecas JavaScript para o desenvolvimento de interfaces de usuário.",
     "SobreP2": "Minha formação em fisioterapia traz uma perspectiva única para o meu trabalho como desenvolvedor front-end, permitindo que eu crie interfaces intuitivas e acessíveis para os usuários finais. Estou constantemente em busca de maneiras de aprimorar minhas habilidades técnicas e estou animado para encontrar oportunidades desafiadoras, onde eu possa contribuir para projetos inovadores e colaborar em equipe, visando alcançar resultados excepcionais.",
-    "habilidades": "Skills",
+    "habilidades": "Habilidades",
     "Visitar": "Visitar Aplicação",
     "Codigo": "Código",
     "Telefone": "Telefone para contato",
