refactor: Refactor and fix some issues in the ui and the responsive designs.

--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -9,10 +9,10 @@
     "Projetos": "Projects",
     "Contato": "Contact",
     "Profissao": "Front-End Developer",
-    "QuemSouEu": "Hello, I'm Josué Carvalho. I'm a Front-End Developer and I work with React.",
+    "QuemSouEu": "Hello, I'm Josué Carvalho and I'm a FullStack Developer.",
     "DownloadCv": "Download CV",
-    "SobreP1": "My name is Josué Carvalho, I'm a career-transitioning front-end developer, 21 years old, and I have advanced English skills. Currently, I'm focused on enhancing my skills in React JS, one of the leading JavaScript libraries for user interface development.",
-    "SobreP2": "My background in physiotherapy brings a unique perspective to my work as a front-end developer, enabling me to create intuitive and accessible interfaces for end users. I am constantly seeking ways to enhance my technical skills and I am excited to find challenging opportunities where I can contribute to innovative projects and collaborate as part of a team, aiming to achieve exceptional results.",
+    "SobreP1": "My name is Josué Carvalho, I'm a career-transitioning front-end developer, 22 years old, and I have advanced English skills. Currently, I'm focused on enhancing my skills in React JS, one of the leading JavaScript libraries for user interface development.",
+    "SobreP2": "Full stack developer with comprehensive experience in Node.js, TypeScript, and React. My skills encompass development on both the server and user interface sides, enabling me to create integrated and efficient solutions. I am committed to continually improving my technical competencies, seeking challenging opportunities to contribute my expertise to innovative projects.",
     "habilidades": "Skills",
     "Visitar": "Visit application",
     "Codigo": "Code",
