--- a/src/i18n/translations/pt.json
+++ b/src/i18n/translations/pt.json
@@ -9,11 +9,14 @@
     "Projetos": "Projetos",
     "Contato": "Contato",
     "Profissao": "Desenvolvedor Front-End",
-    "QuemSouEu": "Olá sou Josue Carvalho. Sou Desenvolvedor Front-End e trabalho com React.",
+    "QuemSouEu": "Olá sou Josue Carvalho e sou Desenvolvedor Full-Stack.",
     "DownloadCv": "Baixar CV",
-    "SobreP1": "Meu nome é Josué Carvalho, sou um desenvolvedor front-end em transição de carreira, com 21 anos de idade e possuo habilidades avançadas em inglês. Atualmente, estou focado em aprimorar minhas habilidades em React JS, uma das principais bibliotecas JavaScript para o desenvolvimento de interfaces de usuário.",
-    "SobreP2": "Minha formação em fisioterapia traz uma perspectiva única para o meu trabalho como desenvolvedor front-end, permitindo que eu crie interfaces intuitivas e acessíveis para os usuários finais. Estou constantemente em busca de maneiras de aprimorar minhas habilidades técnicas e estou animado para encontrar oportunidades desafiadoras, onde eu possa contribuir para projetos inovadores e colaborar em equipe, visando alcançar resultados excepcionais.",
+    "SobreP1": "Meu nome é Josué Carvalho, sou um desenvolvedor front-end em transição de carreira, com 22 anos de idade e possuo habilidades avançadas em inglês. Atualmente, estou focado em aprimorar minhas habilidades em React JS, uma das principais bibliotecas JavaScript para o desenvolvimento de interfaces de usuário.",
+    "SobreP2": "Desenvolvedor full stack com experiência abrangente em Node.js, TypeScript e React. Minha habilidade abrange o desenvolvimento tanto do lado do servidor quanto das interfaces do usuário, permitindo-me criar soluções integradas e eficientes. Estou comprometido em aprimorar constantemente minhas competências técnicas, buscando oportunidades desafiadoras para contribuir com meu conhecimento em projetos inovadores.",
     "habilidades": "Habilidades",
+    "Teste técnico da empresa MKS Sistemas, utilizando React, Typescript, styled-components, react-query, react-helmet e react-router-dom.": "Teste técnico realizado pela MKS Sistemas, utilizando React, TypeScript, styled-components, react-query, react-helmet e react-router-dom.",
+    "Front end completo de um sistema de catalogo desenvolvido em React.js junto com o typescript e utilizando as seguintes bibliotecas: React Router, Context API, custom hooks, Axios, js-cookies e entre muitos outros recursos.": "Desenvolva a parte frontal completa de um sistema de catálogo em React.js, juntamente com TypeScript, utilizando as seguintes bibliotecas: React Router, Context API, custom hooks, Axios, js-cookies e muitos outros recursos.",
+    "A CatalogoAPI é uma API Node.js com Express que oferece autenticação segura, envio de e-mails, validação, armazenamento em S3 da AWS e MongoDB para gerenciar um catálogo único com segurança e eficiência.": "CatalogoAPI é uma API Node.js com Express que oferece autenticação segura, envio de e-mails, validação, armazenamento no AWS S3 e MongoDB para gerenciar um único catálogo de forma segura e eficiente.",
     "Visitar": "Visitar Aplicação",
     "Codigo": "Código",
     "Telefone": "Telefone para contato",
